# svt-rs

./: .gitignore  Cargo.toml  LICENSE  build.rs
src/: main.rs  svt.rs  ui.rs
