[package]
name = "svt"
version = "0.10.0"
authors = ["Jason Ma <jasonma5501@gmail.com>"]
edition = "2018"

[dependencies]
native-windows-gui = {git="https://github.com/gabdube/native-windows-gui", features = ["flexbox"]}
native-windows-derive = {git="https://github.com/gabdube/native-windows-gui"}
anyhow = "1.0.51"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
xch = "1.1"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"